--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
           </meta>
           <meta name="viewport" content="width=device-width, initial-scale = 1" />
           <!--Enter names below -->
-          <meta name="Author" content="Kacian Richards, Deanna Sawyers, etc" />
+          <meta name="Author" content="Kacian Richards, Deanna Sawyers, Romaine Adams" />
           <meta name="Keywords" content="HTML5 Responsive Layout" />
           <title> Game of Chance </title>
           <!--Insert link to JavaScript-->
@@ -16,7 +16,7 @@
           <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
                integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
                crossorigin="anonymous" />
-          <link rel="stylesheet" type="text/css" href="../CSS/Form.css" />
+          <link rel="stylesheet" type="text/css" href="../groupProject/CSS/Form.css" />
      </HEAD>
 
      <BODY>
