--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
                integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
                crossorigin="anonymous" />
-          <link rel="stylesheet" type="text/css" href="../groupProject/CSS/Form.css" />
+          <link rel="stylesheet" type="text/css" href="CSS/Form.css" />
      </HEAD>
 
      <BODY>
@@ -58,10 +58,10 @@
                                    <br /><br />
                                    <!--Submit button-->
                                    <button type="button" class="btn btn-lg btn-light" id="Register"
-                                        onclick="Storage()">Register</button>
+                                        onclick="Storage();">Register</button>
                                    <input type="reset" value="Reset" class="btn btn-lg btn-light" />
                                    <button id="Play" class="btn btn-lg btn-light"
-                                        onclick="location.href='../groupProject/Html/gameindex.html'">Play</button>
+                                        onclick="location.href='Html/gameindex.html'">Play</button>
                                    <br />
                               </fieldset>
                          </FORM>
