--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                <!--Insert names below-->
                <h6>Copyright &copy; Kacian Richards, Deanna Sawyers, Romaine Adams </h6>
           </FOOTER>
-          <script src="../groupProject/Javascript/Function1.js"></script>
+          <script src="Javascript/Function1.js"></script>
      </BODY>
 
 </HTML>
