--- a/Html/gameindex.html
+++ b/Html/gameindex.html
@@ -32,7 +32,7 @@
       <button type="button" id="restart-game" class="btn btn-lg btn-light">
         Restart
       </button>
-      <button type="button" id="returnToForm" class="btn btn-lg btn-light" onclick="location.href='index.html'">
+      <button type="button" id="returnToForm" class="btn btn-lg btn-light" onclick="location.href='../index.html'">
         Quit
       </button>
       <div id="resultHistory">
